--- a/app/views/signup.erb
+++ b/app/views/signup.erb
@@ -1,22 +1,18 @@
-<head>
-  <style>
-    div.signup {
-    background: linear-gradient(to right, #46DAFF, #648880, #293f50);
-    width: 500px;
-    margin: auto;
-    border: solid;
-    text-align: center;
-    padding: 10px;
-    }
-  </style>
-  <div class="signup">
-    <form method="post" action='/signup'>
-  <label>Username: </label><input type="text" name="username">
-  <label>Email: </label><input type="text" name="email">
-  <br></br>
-  <label>Password: </label><input type="password" name="password">
-  <br></br>
-  <input type="submit" value="Sign Up">
-</form>
-</div>
-</head>
+<!DOCTYPE html>
+<html>
+  <head>
+    <head>
+      <LINK REL = Stylesheet TYPE="text/css" HREF="/style.css">
+    </head>
+
+    <div class="content">
+      <form method="post" action='/signup'>
+    <label>Username: </label><input type="text" name="username">
+    <label>Email: </label><input type="text" name="email">
+    <br></br>
+    <label>Password: </label><input type="password" name="password">
+    <br></br>
+    <input type="submit" value="Sign Up">
+  </form>
+  </div>
+</html>
