--- a/app/views/tweets/show.erb
+++ b/app/views/tweets/show.erb
@@ -1,22 +1,19 @@
 
-<head>
-  <style>
-    div.tweet {
-    background: linear-gradient(to right, #46DAFF, #648880, #293f50);
-    width: 500px;
-    margin: auto;
-    border: solid;
-    text-align: center;
-    padding: 0px;
-    }
-  </style>
-<div class="tweet">
-<p><%= @tweet.content %></p>
-<a href="/tweets/<%= @tweet.id %>/edit"><input type="submit" value="Edit Tweet"></a>
-<br></br>
-<form action="/tweets/<%= @tweet.id %>" method="post">
-<input type="hidden" name="_method" value="DELETE">
-  <input type="submit" value="Delete Tweet"></a>
-</form>
-</div>
-</head>
+<!DOCTYPE html>
+<html>
+    <head>
+      <link rel="stylesheet" type="text/css" href="/style.css">
+    </head>
+
+    <body>
+      <div class="content">
+        <p><%= @tweet.content %></p>
+        <a href="/tweets/<%= @tweet.id %>/edit"><input type="submit" value="Edit Tweet"></a>
+        <br></br>
+        <form action="/tweets/<%= @tweet.id %>" method="post">
+          <input type="hidden" name="_method" value="DELETE">
+          <input type="submit" value="Delete Tweet"></a>
+        </form>
+      </div>
+    </body>
+  </html>
