--- a/app/views/login.erb
+++ b/app/views/login.erb
@@ -1,21 +1,17 @@
+<!DOCTYPE html>
+<html>
+    <head>
+      <link rel="stylesheet" type="text/css" href="/style.css">
+    </head>
 
-<head>
-  <style>
-    div.login {
-    background: linear-gradient(to right, #46DAFF, #648880, #293f50);
-    width: 500px;
-    margin: auto;
-    border: solid;
-    text-align: center;
-    padding: 10px;
-    }
-  </style>
-<div class="login">
-<form method="post" action="/login">
-  <label>Username: </label><input type="text" name="username" id="username">
-  <label>Password: </label><input type="text" name="password">
-  <br></br>
-  <input type="submit" value="submit">
-</form>
-</div>
-</head>
+    <body>
+      <div class="content">
+      <form method="post" action="/login">
+        <label>Username: </label><input type="text" name="username" id="username">
+        <label>Password: </label><input type="text" name="password">
+        <br></br>
+        <input type="submit" value="submit">
+      </form>
+      </div>
+    </body>
+  </html>
