--- a/app/views/layouts.erb
+++ b/app/views/layouts.erb
@@ -6,25 +6,25 @@
     <link rel="stylesheet" href="/css/style.css">
   </head>
   <body>
-    <nav>
+    <nav class="navbar navbar-default">
       <% if logged_in? %>
 
-        <a href="/tweets/new"> Create Tweet </a>
-        <a href="/logout"> Log Out </a>
+        <a href="/tweets/new">Create Tweet</a>
+        <a href="/logout">Log Out</a>
         <p>Welcome, <%=current_user.username %></p>
 
       <% else %>
         <a href="/signup">Sign Up</a>
-        <a href="/login"> Sign In </a>
+        <a href="/login">Sign In</a>
       <%end %>
 
     </nav>
-    <div class="container">
-      <h1>Fwitter</h1>
-      <%= yield %>
-
-
+    <div>
+        <h1>Fwitter</h1>
+        <%= yield %>
     </div>
+
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
   </body>
