--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,4 +1,4 @@
-<p>Here are your tweets, <%= @user.username %></p>
+<p>These are your tweets, <%= @user.username %></p>
   <% @user.tweets.each do |tweet| %>
     <div>
       <%= tweet.content %>
