--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -6,7 +6,7 @@
 
 
 <h3>Sign Up</h3>
-<form action="/create_user" method="POST">
+<form action="/signup" method="POST">
   <p>Name: <input type="text" name="username"></p>
   <p>Email: <input type="text" name="email"></p>
   <p>Password: <input type="text" name="password"></p>
