--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -3,5 +3,5 @@
 <form method="post" action="/tweets/<%=@tweet.id%>">
   <input id="hidden" type="hidden" name="_method" value="PATCH">
   <input type="text" name="content" value="<%= @tweet.content %>">
-  <input type="submit" value="submit">
+  <input type="submit" class="btn btn-primary" value="submit">
 </form>
