--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,1 +1,8 @@
-This is a successful index connection
+Welcome to Fwitter
+
+<h4><a href="/signup">Sign Up</a></h4>
+
+
+<br>
+
+<h4><a href="/login">Log In</a></h4>
