--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -3,3 +3,5 @@
 <p><%=@tweet.content%></p>
 
 <a href="/tweets">Back to all tweets</a>
+<a href="/tweets/<%=@tweet.id%>/edit">Edit Tweet</a>
+<a href="/tweets/<%=@tweet.id%>/delete">Delete Tweet</a>
