--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -15,6 +15,7 @@
 <h2>All Tweets - Click to go to edit page</h2>
   <% Tweet.all.each do |tweet| %>
   <h3><a href="/tweets/<%=tweet.id%>"><%=tweet.content%></h3>
+  <h3><a href="/tweets/<%=tweet.id%>/edit">Edit</h3>
   <%end%>
 
 <h4><a href="/logout">Log Out</a></h4>
