--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -4,4 +4,7 @@
 
 <a href="/tweets">Back to all tweets</a>
 <a href="/tweets/<%=@tweet.id%>/edit">Edit Tweet</a>
-<a href="/tweets/<%=@tweet.id%>/delete">Delete Tweet</a>
+<form action="/tweets/<%=@tweet.id%>" method="POST">
+  <input id="hidden" type="hidden" name="_method" value="delete">
+  <button type="submit">Delete Tweet</button>
+</form>
