--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,8 +1,6 @@
-
-
 <h1>Welcome, <%= @user.username %> - These are your tweets!</h1>
 
-
   <% @user.tweets.each do |tweet| %>
-    <%=tweet.content%>
+    <h3><a href="/tweets/<%=@tweet.id%>/edit"><%=tweet.content%><br><br>Edit Tweet</a><h3> 
+    <h3><a href="/tweets/<%=@tweet.id%>/delete"> Delete Tweet</a><h3>  
   <% end %>
