--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -14,8 +14,11 @@
 
 <h2>All Tweets - Click to go to edit page</h2>
   <% Tweet.all.each do |tweet| %>
-  <h3><a href="/tweets/<%=tweet.id%>"><%=tweet.content%></h3>
-  <h3><a href="/tweets/<%=tweet.id%>/edit">Edit</h3>
+  <h3><%=tweet.content%></h3>
+  <h3><a href="/tweets/<%=tweet.id%>/edit">Edit</a></h3>
   <%end%>
 
+
+<br>
+<br>
 <h4><a href="/logout">Log Out</a></h4>
