--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -2,7 +2,6 @@
 
 <form method="post" action="/tweets/<%= @tweet.id %>/delete">
   <input id="hidden" type="hidden" name="_method" value="DELETE">
-  <input type="submit" value="Delete Tweet">
+  <input class="btn btn-danger" type="submit" value="Delete Tweet">
+  <a class="btn btn-info" href="/tweets/<%= @tweet.id %>/edit">Edit Tweet</a>
 </form>
-
-<a href="/tweets/<%=@tweet.id%>/edit">Edit Tweet</a>
