--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,6 +1,6 @@
 <p>These are your tweets, <%= @user.username %></p>
   <% @user.tweets.each do |tweet| %>
     <div>
-      <%= tweet.content %>
+      <%= tweet.name %>
     </div>
   <% end %>
