--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,22 +1,18 @@
-
-# This is likely a tweet index for all users tweets
-# this is also going to need logic for a user to go to his individual show page
-
-<h1>Welcome, <%= @user.username %> </h1>
+<h1>Welcome, <%= @user.username %>! </h1>
 
 
-<h4><a href="/users/<%=@user.slug%>">Your Page</a></h4>
+<h4><a href="/users/<%=@user.slug%>">Your Homepage</a></h4>
 
-<h4><a href="/tweets/new">Make a new tweet</a></h4>
+<h4><a href="/tweets/new">Make a Tweet</a></h4>
 
 
 <br>
 
 <h2>All Tweets - Click to go to edit page</h2>
-  <% Tweet.all.each do |tweet| %>
-  <h3><%=tweet.content%></h3>
-  <h3><a href="/tweets/<%=tweet.id%>/edit">Edit</a></h3>
-  <%end%>
+  <ul><% Tweet.all.each do |tweet| %>
+    <li><%=tweet.content%> <a href="/tweets/<%=tweet.id%>/edit"> Edit</a></li>
+    <%end%>
+  </ul>
 
 
 <br>
