--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -4,7 +4,7 @@
       <h5><a href="/tweets/<%=@tweet.id%>/edit"> Edit Tweet</a><h5> 
 
 
-<form method="post" action="/tweets/<%=@user.tweets.first.id%>/delete">
+<form method="post" action="/tweets/<%=@tweet.id%>/delete">
   <input id="hidden" type="hidden" name="_method" value="delete">
   <input id="Delete Tweet" type="submit" value="Delete Tweet">
 </form>
