--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,3 +1,6 @@
+<% if flash.has?(:message) %>
+  <%= flash[:message] %>
+<% end %>
 <h1>Welcome, to Fwitter!</h1>
 
 <form method="POST" action="/login" >
