--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -2,9 +2,8 @@
   <h1>Welcome to Fwitter</h1>
   <% if logged_in? %>
     <h2>Welcome Back, <%=current_user.username %>!!</h2>
+  <% else %>
+    <a class="btn btn-primary" href="/signup">Sign Up</a>
+    <a class="btn btn-default" href="/login">Log In</a>
   <% end %>
-
-  <a class="btn btn-primary" href="/signup">Sign Up</a>
-  <a class="btn btn-default" href="/login">Log In</a>
-
 </div>
