--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,5 +1,5 @@
 <div class="jumbotron center">
-  <h1>Welcome to Fwitter</h1>
+  <h1>Welcome to Fwitter!</h1>
   <% if logged_in? %>
     <h2>Welcome Back, <%=current_user.username %>!!</h2>
   <% else %>
