--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -17,17 +17,18 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/tweets">Fwitter</a>
+          <a class="navbar-brand" href="/">Fwitter</a>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
             <% if logged_in? %>
+              <li><a href="/tweets">My Tweets</a></li>
               <li><a href="/tweets/new">Create Tweet</a></li>
               <li><a href="/logout">Log Out</a></li>
             <% else %>
               <li><a href="/signup">Sign Up</a></li>
-              <li><a href="/login">Sign In</a></li>
+              <li><a href="/login">Log In</a></li>
             <%end %>
           </ul>
         </div><!-- /.navbar-collapse -->
