--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,4 +1,4 @@
-<h1>Login to Fwitter!</h1>
+<h1>Log In to Fwitter!</h1>
 <div class="panel panel-default">
   <div class="panel-heading">
     <h3 class="panel-title">Log In</h3>
