--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,8 +1,11 @@
-<h1>Welcome, <%= current_user.username %></h1>
-<h2>Tweets</h2>
+<div class="container center">
+  <h1>Welcome, <%= current_user.username %>!</h1>
+  <hr>
+  <h2>Tweets</h2>
 
-<% @tweets.each do |tweet| %>
-  <div>
-    <%= tweet.content %>
-  </div>
-<% end %>
+  <% @tweets.each do |tweet| %>
+    <div>
+      <%= tweet.content %>
+    </div>
+  <% end %>
+</div>
