--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -19,6 +19,8 @@
           </button>
           <a class="navbar-brand" href="/">Fwitter</a>
         </div>
+
+        <img class="navbar-brand" id="icon" src="./images/fwittericon.png">
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
