--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,5 +1,6 @@
 <div class="jumbotron center">
   <h1>Welcome to Fwitter!</h1>
+  <img src="./images/fwittericon.png" alt="Fwitter Icon"/><br>
   <% if logged_in? %>
     <h2>Welcome Back, <%=current_user.username %>!!</h2>
   <% else %>
