--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,1 +1,8 @@
-<h1>Welcome <%= @user.username.capitalize %></h1>
+<h1>Welcome, <%= @user.username.capitalize %></h1>
+
+
+
+
+
+
+<a href="/logout">Logout</a>
