--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -1,11 +1,11 @@
 <h1>Create a new User</h1>
 
 <form action="/signup" method="POST">
-  Username: <input type="text" name="user[username]">
+  Username: <input type="text" name="username" id="username">
   <br></br>
-  Email: <input type="text" name="user[email]">
+  Email: <input type="text" name="email" id="email">
   <br></br>
-  Password: <input type="password" name="user[password]">
+  Password: <input type="password" name="password" id="password">
 
 
 
