--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -4,4 +4,10 @@
 
 <a href="/tweets/<%= @tweet.id %>/edit">Edit Tweet</a>
 <!-- This has to be a delete inside of a form. Check older lessons. Or does it redirect you to the page where it has the form? Confirm-->
-<a href="/tweets/<%= @tweet.id %>/delete">Delete Tweet</a>
+
+
+<form action="/tweets/<%= @tweet.id %>/delete" method="post">
+  <input type="hidden" name="_method" id="hidden" value="delete">
+  
+  <input type="submit" value="Delete Tweet">
+</form>
