--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -4,5 +4,5 @@
 <input id="username" name="username"><br>
 <label for="password">Password:</label>
 <input id="password" name="password"><br><br>
-<button type="submit" id="Login">Login</button>
+<button type="submit" id="submit">Login</button>
 </form>
