--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -1,4 +1,4 @@
-<h1>Welcome, <%=current_user.name%></h1>
+<h1>Welcome, <%=current_user.username%></h1>
 <h2>Would you like to post a new tweet?</h2>
 <form method="post" action="/tweets">
 <textarea id="content" name="content"></textarea>
