implemented tweet editing

--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,7 +1,7 @@
 <h1>Showing Tweet <%=@tweet.id%></h1>
 <h2>Written by: <%=@tweet.user.username%></h2>
 <p><%=@tweet.content%></p>
-<form method="post" action="/tweets/<%=@tweet.id%>">
+<form method="post" action="/tweets/<%=@tweet.id%>/delete">
 <input type="hidden" name="_method" value="delete">
 <button type="submit" id="Delete Tweet">Delete Tweet</button>
 </form>
