--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -1,5 +1,5 @@
 <h3>Edit Tweet</h3>
-<p><%= @tweet.user %></p>
+<p><%= @tweet.user.username %></p>
 <form action="/tweets/<%= @tweet.id %>" method="POST">
   <input type="text" name="content" value="<%=@tweet.content%>">
   <input type="submit" value="submit">
