--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,6 +1,5 @@
 <h3>Tweet</h3>
-<p><%= @tweet.user %>:</p>
-<p><%= @tweet.content %></p>
+<p><%= @tweet.user.username %>: <%= @tweet.content %></p>
 <form method="post" action="/tweets/<%=@tweet.id%>/delete">
   <input id="hidden" type="hidden" name="_method" value="delete">
   <input type="submit" value="Delete Tweet">
