--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -1,3 +1,7 @@
+<% if flash.has?(:message) %>
+  <%= flash[:message] %>
+<% end %>
+
 <form action="/signup" method="post">
  
   <p>Username: <input type="text" name="username" id="Username"></p>
