--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -9,8 +9,8 @@
   <input type="text" name="email" id="email">
   <br />
   <br />
-  <label for="password_digest">Password: </label>
-  <input type="password_digest" name="password_digest" id="password">
+  <label for="password">Password: </label>
+  <input type="text" name="password" id="password">
   <br />
   <br />
   <input type="submit" value="Submit">
