Completed Logout specs

--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -3,7 +3,7 @@
 <form action="/login" method="post">
   <p>
     <label for="username">Username:</label>
-    <input type="text" name="username"
+    <input type="text" name="username" value="username">
   </p>
 
   <p>
@@ -11,5 +11,5 @@
     <input type="password" name="password">
   </p>
 
-  <input type="submit" value="Log in">
+  <input type="submit" id="submit" value="Log in">
 </form>
