--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -9,5 +9,5 @@
   <input type="password" name="password" id="password">
   <br />
   <br />
-  <input type="submit" value="Submit" name="submit">
+  <input type="submit" value="Submit">
   </form
