--- a/app/views/tweets/show.erb
+++ b/app/views/tweets/show.erb
@@ -4,4 +4,9 @@
 
 <a href="/tweets/<%= @tweet.id %>/edit"><input type="button" value="Edit Tweet"></a> <br>
 
+<form action="/tweets/<%= @tweet.id %>" method="post">
+  <input type="hidden" name="_method" value="delete">
+  <input type="submit" value="Delete Tweet">
+</form>
+
 <a href="/tweets">View All Tweets</a>
