--- a/app/views/users/signup.erb
+++ b/app/views/users/signup.erb
@@ -3,7 +3,7 @@
 <form action="/signup" method="post">
   <p>
     <label for="username">Username:</label>
-    <input type="text" name="username"
+    <input type="text" name="username">
   </p>
 
   <p>
