--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -3,5 +3,5 @@
 <form action="/tweets" method="POST">
   <label>Tweet:</label>
   <input type="text" name="content">
-  <input type="submit" value="Submit">
+  <input type="submit" value="Submit" id="submit">
 </form>
