--- a/app/views/tweets/new.erb
+++ b/app/views/tweets/new.erb
@@ -2,7 +2,7 @@
 <form action="/tweets/new" method="post">
     <p>
       <label for="content">Tweet:</label>
-      <input type="text" name="content">
+      <input type="text" name="tweet[content]" id="content">
     </p>
     <input type="submit" name="submit" value="submit">
 </form>
