added id to tweet edit

--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -4,5 +4,5 @@
   <input id="hidden" type="hidden" name="_method" value="PATCH">
   <label>Tweet:</label>
   <input type="text" name="content" value="<%=@tweet.content%>">
-  <input type="submit" value="Submit">
+  <input type="submit" value="Submit" id="submit">
 </form>
