--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,7 +1,7 @@
 
 <p><%=@tweet.content%></p>
 
-
+<a href="/tweets/:id/edit">Edit Tweet</a>
 <form method="tweets/:id/delete" action="POST">
 
   <input type="submit" value="Delete Tweet" id="Delete Tweet" name="Delete Tweet">
