--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,10 +1,11 @@
 
-<p><%=@tweet.content%></p>
+<p><%= @tweet.content%></p>
 
-<a href="/tweets/:id/edit">Edit Tweet</a>
-<form method="tweets/:id/delete" action="POST">
+<a href="/tweets/<%=@tweet.id%>/edit">Edit Tweet</a>
 
-  <input type="submit" value="Delete Tweet" id="Delete Tweet" name="Delete Tweet">
+<form action="<%=@tweet.id%>/delete" method="POST">
+  <input id="hidden" type="hidden" name="_method" value="DELETE">
+  <input type="submit" value="Delete Tweet">
 
 
 </form>
