--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -2,5 +2,8 @@
 <h2>Tweets</h2>
 
 <% @tweets.each do |tweet| %>
-  <a href="/tweets/<%=tweet.id%>">  <%= tweet.content %><br /></a>
+  <h3> <a href="/tweets/<%=tweet.id%>">  <%= tweet.content %><br /></a></h3>
 <% end %>
+
+ <a href="/tweets/new">New Tweet</a>
+<a href="/users/<%= current_user.username %>">My Tweets</a>
