--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,4 +1,12 @@
 <h1>Tweets:</h1>
 <% current_user.tweets.each do |tweet| %>
   <h3><%= tweet.content %></h3>
+  <a href="/tweets/<%=tweet.id%>/edit"><input type="button" value="Edit Tweet"></a>
+  <form action="/tweets/<%=tweet.id%>/delete" method="post">
+    <input type="hidden" name="_method" value="delete">
+    <input type="submit" value="Delete Tweet">
+  </form>
 <% end %>
+
+<a href="/tweets/new">New Tweet</a>
+<a href="/tweets">Home</a>
