--- a/app/views/tweets/show.erb
+++ b/app/views/tweets/show.erb
@@ -1,4 +1,8 @@
 <%= @tweet.content %>
 
-Delete Tweet
-Edit Tweet
+
+<form action="/tweets/<%= @tweet.id %>" method="post">
+    <input type="submit" name="Delete Tweet" value="Delete Tweet">
+</form>
+<a href="/tweets/<%= @tweet.id %>/delete" id="Delete Tweet">Delete Tweet</a>
+<a href="/tweets/<%= @tweet.id %>/edit">Edit Tweet</a>
