--- a/app/views/tweets/index.erb
+++ b/app/views/tweets/index.erb
@@ -1,5 +1,5 @@
-Welcome, <%= @user.username %>
-<% Tweet.all.each do |tweet| %>
+Welcome, <%= @current_user.username %>
+<% @tweets.each do |tweet| %>
 <p>
   <%= tweet.content %>
 </p>
