--- a/app/views/users/index.erb
+++ b/app/views/users/index.erb
@@ -1,5 +1,5 @@
-Welcome, <%= @user.username %>
-<% @user.tweets.each do |tweet| %>
+Welcome, <%= @current_user.username %>
+<% @current_user.tweets.each do |tweet| %>
 <p>
   <%= tweet.content %>
 </p>
