--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title><%= yield(:title) %></title>
+    <title><%= @title %></title>
   </head>
   <body>
     <%= yield %>
