tweet create/edit

--- a/app/views/tweets/new.erb
+++ b/app/views/tweets/new.erb
@@ -1,6 +1,5 @@
 <% @title = "New Tweet" %>
 <form action="/tweets" method="post">
-  <label>Tweet!</label>
-  <input type="text" name="tweet" placeholder="your tweet here">
+  <input type="text" name="content" placeholder="your tweet here">
   <input type="submit" name="submit" value="Post">
 </form>
