add signup form/ability

--- a/app/views/tweets/new.erb
+++ b/app/views/tweets/new.erb
@@ -1,5 +1,5 @@
 <% @title = "New Tweet" %>
 <form action="/tweets" method="post">
-  <input type="text" name="content" placeholder="your tweet here">
+  <input type="text" name="content" size = "140" maxlength = "140" placeholder="your tweet here" autofocus>
   <input type="submit" name="submit" value="Post">
 </form>
