--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -2,7 +2,7 @@
   <%= flash[:message] %>
 <% end %>
 
-<h1>Welcome, <%= @user.username %></h1>
+<h1>Welcome, <%= current_user.username %></h1>
 <a href="/tweets/new">Create Tweet</a>&nbsp&nbsp<a href="/logout">Logout</a>
 
 <h2>Here's what's trending: </h2>
