--- a/app/views/application/root.erb
+++ b/app/views/application/root.erb
@@ -1,4 +1,4 @@
 <h1>Welcome to Fwitter</h1>
 <p>
-  <a href="#">Sign Up</a>, or <a href="#">Log In</a>
+  <a href="/signup">Sign Up</a>, or <a href="/login">Log In</a>
 </p>
