--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,5 +1,5 @@
 <form action = "/login" method = "post">
     <input placeholder = "username" name = "username" type = "text" required>
     <input placeholder = "password" name = "password" type = "password" required>
-    <input type = "submit" name = "submit" value = "Log In">
+    <input id="submit" type = "submit" name = "submit" value = "Log In">
 </form>
