all tests passing

--- a/app/views/application/root.erb
+++ b/app/views/application/root.erb
@@ -1,4 +1,6 @@
-<h1>Welcome to Fwitter</h1>
-<p>
-  <a href="/signup">Sign Up</a>, or <a href="/login">Log In</a>
-</p>
+<% @title = "Welcome to Fwitter" %>
+
+<div class="col-md-4 col-md-offset-4">
+<h1 class="vertical-space center">Welcome to Fwitter</h1>
+<h3 class="center"><a href="/signup">SIGN UP</a> or <a href="/login">LOG IN</a></h3>
+</div>
