--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -2,9 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="/bootstrap.min.css" rel="stylesheet" type="text/css">
+    <link href="/style.css" rel="stylesheet" type="text/css">
     <title><%= @title %></title>
   </head>
   <body>
-    <%= yield %>
+    <div class = "container-fluid">
+      <%= yield %>
+    </div>
   </body>
 </html>
