--- a/app/views/tweets/index.erb
+++ b/app/views/tweets/index.erb
@@ -1,5 +1,9 @@
+<div class="col-md-4 col-md-offset-4">
 <h2>Welcome, <%= @user.username %>!</h2>
+<hr style="height:4px;border-width:0;color:#727474;background-color:#727474" />
 
 <% @tweets.each do |tweet| %>
-  <h3> <%= tweet.content %> </h3>
+  <p> <b><%= tweet.user.username %></b>: <%= tweet.content %> </p>
+  <hr style="height:2px;width:300px;border-width:0;color:#C7CFCF;background-color:#C7CFCF;align:left;" />
   <% end %>
+</div>
