--- a/app/views/users/new.erb
+++ b/app/views/users/new.erb
@@ -1,8 +1,13 @@
 <% @title = "Sign Up" %>
 
-<form action = "/signup" method = "post">
-    <input type = "text" name = "username" placeholder = "username" required><br /><br />
-    <input type = "text" name = "email" placeholder = "email" required><br /><br />
-    <input type = "password" name = "password" placeholder = "password" required><br /><br />
+<div class="col-md-4 col-md-offset-4">
+<form class = "vertical-space" action = "/signup" method = "post">
+    <label>Username</label><br />
+    <input type = "text" name = "username" placeholder = "SPEWOfficial" required><br /><br />
+    <label>Email</label><br />
+    <input type = "text" name = "email" placeholder = "hgranger@hogwarts.edu" required><br /><br />
+    <label>Password</label><br />
+    <input type = "password" name = "password" placeholder = "balderdash" required><br /><br />
     <input type = "submit" name = "submit" value = "Sign Up">
 </form>
+</div>
