--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,5 +1,5 @@
 <h2><%= @user.username%>'s Tweets</h2>
 
-<% @user.tweets.all.each do |tweet|%>
+<% @user.tweets.each do |tweet|%>
     <p><%= tweet.content %></p>
 <% end %>
