--- a/app/views/application/root.erb
+++ b/app/views/application/root.erb
@@ -1,6 +1,4 @@
 <% @title = "Welcome to Fwitter" %>
 
-<div class="col-md-4 col-md-offset-4">
 <h1 class="vertical-space center">Welcome to Fwitter</h1>
-<h3 class="center"><a href="/signup">SIGN UP</a> or <a href="/login">LOG IN</a></h3>
-</div>
+<h3 class="center"><a href="/signup">SIGN UP</a> | <a href="/login">LOG IN</a></h3>
