--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -9,7 +9,9 @@
   </head>
   <body>
     <div class = "container-fluid">
+      <div class = "col-md-4 col-md-offset-4">
       <%= yield %>
+      </div>
     </div>
   </body>
 </html>
