--- a/app/views/tweets/new.erb
+++ b/app/views/tweets/new.erb
@@ -1,5 +1,7 @@
 <% @title = "New Tweet" %>
-<form action="/tweets" method="post">
-  <input type="text" name="content" size = "140" maxlength = "140" placeholder="your tweet here" autofocus>
+<form class = "vertical-space" action="/tweets" method="post">
+  <input class = "tweet" type="text" name="content" size = 30 maxlength = "140" placeholder="your tweet here" autofocus>
+  <br />
   <input id="submit" type="submit" name="submit" value="Post">
 </form>
+<p><a href="/tweets">Back to Timeline</a></p>
