--- a/app/views/tweets/edit.erb
+++ b/app/views/tweets/edit.erb
@@ -2,6 +2,6 @@
 <form method='POST' action='/tweets/<%=@tweet.id%>'>
     <input type='hidden' value='<%=@user.id%>' name='user_id' id='user_id'>
     <input type='hidden' value='<%=@tweet.id%>' name='tweet_id' id='tweet_id'>
-    Content: <input type='text' name='content' value='<%=@tweet.id%>' id='content'>
+    Content: <input type='text' name='content' value='<%=@tweet.content%>' id='content'>
     <input type='submit' value='submit'>
 </form>
