--- a/app/views/tweets/index.erb
+++ b/app/views/tweets/index.erb
@@ -2,3 +2,4 @@ Welcome, <%=@user.username%>
 <%@tweets.each do |tweet|%>
     <%=tweet.user%> Content: <a href="/tweets/<%=tweet.id%>"> <%=tweet.content%></a>
 <%end%>
+<a href="/tweets/new">Create Tweet</a>
