--- a/app/views/tweets/show.erb
+++ b/app/views/tweets/show.erb
@@ -2,6 +2,4 @@
 <form method='POST' action='/tweets/<%=@tweet.id%>/delete'>
     <input type='submit' value='Delete Tweet'>
 </form>
-<form method='POST' action='/tweets/<%=@tweet.id%>/edit'>
-    <input type='submit' value='Edit Tweet'>
-</form>
+<a href="/tweets/<%=@tweet.id%>/edit">Edit Tweet</a>
