--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,1 +1,7 @@
-<h3>Welcome, </h3>
+<h3>Welcome, <%= current_user.username %></h3>
+
+<h5>Tweets</h5>
+
+<% Tweet.all.each do |tweet| %>
+  <%= tweet.content %>
+<% end %>
