--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -4,5 +4,5 @@
   <input type="text" name="username" placeholder="username">
   <input type="password" name="password" placeholder="password">
 
-  <input type="submit" value="submit>
+  <input type="submit" value="submit">
 </form>
