--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -1,4 +1,6 @@
-<form action="/tweets]" method="POST">
+<h3>Create new Tweet</h3>
+
+<form action="/tweets" method="POST">
   <input type="text" name="content" id="content">
 
   <input type="submit" value="submit">
