--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,7 +1,5 @@
 <h3>Welcome, <%= current_user.username %></h3>
 
-<h5>Tweets</h5>
-
 <% Tweet.all.each do |tweet| %>
-  <%= tweet.content %>
+  <p>Tweet # <%=tweet.id%> <b>|</b> <a href="/tweets/<%=tweet.id%>"><%= tweet.content %></a></p>
 <% end %>
