fixed double instance variable problems in tweets_controller

--- a/app/views/tweets/edit.erb
+++ b/app/views/tweets/edit.erb
@@ -6,7 +6,7 @@
 </form>
 
 <form action="/tweets/<%= @tweet.id %>/delete" method="post">
-  <input type="submit" name="delete" value="Delete">
+  <input type="submit" value="Delete">
 </form>
 
 <p><a href="/tweets">Back to Timeline</a></p>
