--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -3,6 +3,6 @@
 <form class="vertical-space center" action = "/login" method = "post">
     <input placeholder = "username" name = "username" type = "text" required><br />
     <input placeholder = "password" name = "password" type = "password" required><br />
-    <input id="submit" type = "submit" name = "submit" value = "Log In">
+    <input id="submit" type = "submit" value = "Log In">
 </form>
 <p class="center"><a href="/signup">Sign Up</a></p>
