--- a/app/views/users/new.erb
+++ b/app/views/users/new.erb
@@ -4,6 +4,6 @@
     <input type = "text" name = "username" placeholder = "Username" required><br />
     <input type = "text" name = "email" placeholder = "Email" required><br />
     <input type = "password" name = "password" placeholder = "Password" required><br />
-    <input type = "submit" name = "submit" value = "Sign Up">
+    <input type = "submit" value = "Sign Up">
 </form>
 <p class="center"><a href="/login">Log In</a></p>
