--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,21 +1,21 @@
-<% @title = "#{@user.username}'s Tweets" %>
+<% @title = "#{@this_user.username}'s Tweets" %>
 
-<h2><%= @user.username%>'s Tweets</h2>
+<h2><%= @this_user.username%>'s Tweets</h2>
 <p>
-    <% if @user.id == @current_user.id %>
+    <% if @this_user.id == @current_user.id %>
         <a href="/tweets/new">New Tweet</a> |
     <% end %>
     <a href="/tweets">Back to Timeline</a>
-    <% if @user.id == @current_user.id %>
+    <% if @this_user.id == @current_user.id %>
         | <a href="/logout">Log Out</a>
     <% end %>
 </p>
 <hr style="height:4px;border-width:0;color:#727474;background-color:#727474" />
 
-<% @user.tweets.each do |tweet|%>
+<% @this_user.tweets.each do |tweet|%>
     <p><%= tweet.content %>
         (<a href="/tweets/<%= tweet.id %>">view</a>)
-        <% if @user == @current_user %>
+        <% if @this_user == @current_user %>
           (<a href="/tweets/<%= tweet.id %>/edit">edit</a>)
         <% end %>
     </p>
