--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -7,6 +7,8 @@
 
     <a href="/tweets/new">New Tweet</a><br>
 
+    <a href="/users/<%= Helpers.current_user(session).slug%>">My Tweets </a><br>
+
     <a href="/logout">Log Out</a>
 
 <%end%>
