--- a/app/views/users/show_user.erb
+++ b/app/views/users/show_user.erb
@@ -1,7 +1,13 @@
 <h1> Your Tweets </h1>
 
-<%= @user.tweets.each do |tweet| %>
-<h3><li><%= tweet.content %></li></h3>
+<% @user.tweets.each do |tweet| %>
+<h3><%= tweet.content %></h3>
     <% end %>
+
+     <br>
+
+    <a href="/tweets"> Return to Tweets </a>
+
+      <br>
 
     <a href="/logout">Log Out</a>
