--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,27 +1,18 @@
-<% if Helpers.logged_in?(session) && Helpers.current_user(session).tweets.include?(@tweet)%>
-
   <h2> Tweet <%= @tweet.id %> </h2>
 
   <h3> <%= @tweet.content %></h3>
 
     <br></br>
 
+    <form action="/tweets/<%= @tweet.id %>/delete" method="post">
+      <input id="hidden" type="hidden" name="_method" value="delete">
+      <input type="submit" value="Delete Tweet" name="delete">
+    </form>
+
+      <br></br>
+
     <a href="/tweets/<%=@tweet.id%>/edit"> Edit Tweet </a>
 
     <br>
 
     <a href="/tweets"> Return to Tweets </a>
-
-    <br></br>
-
-
-    <form action="/tweets/<%= @tweet.id %>/delete" method="post">
-      <input id="hidden" type="hidden" name="_method" value="delete">
-      <input type="submit" value="Delete Tweet">
-    </form>
-
-  <% else %>
-
-    <a href="/login"> Login </a>
-
-  <% end %>
