--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,5 +1,5 @@
-<h1>Thanks for loggin into Fwitter!</h1>
-<h2>Sign up below:</h2>
+<h1>Thanks for logging into Fwitter!</h1>
+<h2>Log in below:</h2>
 <br></br>
 
 <form method="POST" action="/login">
@@ -11,9 +11,5 @@
     <input type="text" id="password" name="password">
     <br></br>
     
-    <label for="email">Email:</label>
-    <input type="text" id="email" name="email">
-    <br></br>
-    
-    <input type="submit" id="submit">Sign Up</input>
+    <input type="submit" id="submit">Log In</input>
 </form>
