--- a/app/views/users/signup.erb
+++ b/app/views/users/signup.erb
@@ -2,7 +2,7 @@
 <h2>Sign up below:</h2>
 <br></br>
 
-<form method="POST" action="/login">
+<form method="POST" action="/signup">
     <label for="username">Username:</label>
     <input type="text" id="username" name="username">
     <br></br>
