--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -4,6 +4,6 @@
 <form action="/signup" method="POST">
   <p>Name: <input type="text" name="username"></p>
   <p>Email: <input type="text" name="email"></p>
-  <p>Password: <input type="text" name="password"></p>
-  <input class="btn btn-primary" type="submit">
+  <p>Password: <input type="password" name="password"></p>
+  <input class="button" type="submit" value="Sign Up">
 </form>
