--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -2,7 +2,7 @@
 
 <form action="/login" method="post">
   <input type="text" name="username" placeholder="Username:">
-  <input type="text" name="password" placeholder="Password:">
+  <input type="password" name="password" placeholder="Password:">
 
   <input type="submit" value="submit">
 </form>
