--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -1,19 +1,11 @@
-<%if logged_in?  %>
-
 <h2> Create a New Tweet </h2>
 
 <form action="/tweets" method="POST">
 
    <label> Tweet </label>
-   <input id="content" type="text" name="tweet"><br>
+   <input id="content" type="text" name="content"><br>
 
   <br></br>
 
   <input type="submit" value="submit">
 </form>
-
-<%else%>
-
-<h2><a href="/login"> You must login to Tweet </a></h2>
-
-<%end%>
