--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,1 +1,7 @@
-you must log in 
+<h1>Login To Fwitter</h1>
+  <form method="post" action="/login">
+    <input type="text" name="username" placeholder="Username:">
+    <input type="text" name="password" placeholder="Password:">
+
+    <input type="submit" value="submit">
+  </form>
