--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -1,9 +1,7 @@
+<h3>Sign Up</h3>
 <form action="/signup" method="POST">
-  <label for="username">Username:</label>
-  <input type="text" name="username"><br>
-  <label for="email">Email:</label>
-  <input type="email" name="email"><br>
-  <label for="password">Password</label>
-  <input type="password" name="password"><br><br>
+  <p>Name: <input type="text" name="username"></p>
+  <p>Email: <input type="text" name="email"></p>
+  <p>Password: <input type="text" name="password"></p>
   <input type="submit" value="submit">
 </form>
