--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,1 +1,11 @@
-<h1>tss</h1>
+<h1>Login</h1>
+
+<form class="" action="/login" method="post">
+  Username:<br>
+  <input type="text" name="username" value=""><br><br>
+  Password: <br>
+  <input type="password" name="password" value="">
+  <br><br>
+  <input type="submit" value="submit">
+
+</form>
