--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -3,5 +3,5 @@
   Tweet to the World: <br><br>
   <input type="text" name="content" value="">
   <br><br>
-  <input type="submit"  value="Tweet">
+  <input type="submit"  value="submit">
 </form>
