--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,3 +1,5 @@
-<h1>Welcome, </h1>
+<h1>Welcome, <%=current_user.username%> </h1>
 
-<%=logged_in?%>
+<%@tweets.each do |tweet| %>
+  <h3><%=tweet.content%></h3>
+<%end%>
