--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -5,9 +5,9 @@
       <input id="hidden"
               type="hidden"
               name="_method"
-              value="PATCH">  
+              value="PATCH">
       <input type="text"
               name="content"
               value="<%= @tweet.content %>">
-      <input type="submit" value="Save Tweet"  >
+      <input type="submit" value="submit"  >
 </form>
