--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -2,3 +2,9 @@
 
 <a href="#">Delete Tweet</a> <br><br>
 <a href="#">Edit Tweet</a>
+
+<form class="" action="/tweets/<%=@tweet.id%>/delete" method="post">
+  <input type="hidden" id="hidden" name="_method" value="DELETE">
+  <input type="submit"  value="Delete Tweet">
+
+</form>
