--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -1,4 +1,4 @@
-<h1>Create tweets</h1>
+<h1>Edit your tweet to the world</h1>
 <form class="" action="/tweets/<%=@tweet.id%>/edit" method="post">
   Your Tweet to the World: <br><br>
   <input type="text" name="content" value="<%=@tweet.content%>">
