--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,7 +1,9 @@
-<%=@tweet.content%>
+<h1><%=@tweet.content%></h1> 
 
-<a href="#">Delete Tweet</a> <br><br>
-<a href="#">Edit Tweet</a>
+<br><br>
+
+
+<a href="/tweets/<%=@tweet.id%>/edit">Edit Tweet</a> <br><br>
 
 <form class="" action="/tweets/<%=@tweet.id%>/delete" method="post">
   <input type="hidden" id="hidden" name="_method" value="DELETE">
