--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -5,4 +5,5 @@
   <input type="text" name="email" id="email">
   <label for="password">Password</label>
   <input type="password" name="password" id="password">
+  <input type="submit" id="submit">
 </form>
