--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -3,4 +3,5 @@
   <input type="text" name="username" id="username">
   <label for="password">Password</label>
   <input type="password" name="password" id="password">
+  <input type="submit" id="submit">
 </form>
