--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -1,5 +1,5 @@
 <form action="/tweets" method="post">
   <label>Content:</label>
   <input type="text" name="username[content][]" id="content">
-  <input type="submit" value="Create Tweet">
+  <input type="submit" id="submit" value="Create Tweet">
 </form>
