--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,4 +1,8 @@
 <%=@tweet.content%>
 
-<a href="">Delete Tweet</a>
-<a href="">Edit Tweet</a>
+<form method="post" action="/tweets/<%=@tweet.id%>/delete">
+  <!-- <input id="hidden" type="hidden" name="_method" value="DELETE"> -->
+  <input type="submit" value="Delete Tweet">
+</form>
+
+<a href="/tweets/<%=@tweet.id%>/edit">Edit Tweet </a>
