--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,7 +1,7 @@
 <%=@tweet.content%>
 
 <form method="post" action="/tweets/<%=@tweet.id%>/delete">
-  <!-- <input id="hidden" type="hidden" name="_method" value="DELETE"> -->
+  <input id="hidden" type="hidden" name="_method" value="DELETE">
   <input type="submit" value="Delete Tweet">
 </form>
 
