--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -1,5 +1,6 @@
 <%=@tweet.content%>
 <form action="/tweets/<%=@tweet.id%>" method="post">
+  <input id="hidden" type="hidden" name="_method" value="PATCH">
   <label for="content">Content: </label>
   <input type="text" name="content" id="content">
   <input type="submit" value="submit" id="submit">
