--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -1,6 +1,7 @@
 <h1>Edit Tweet</h1>
 <h3><%= @tweet.user.username %></h3>
 <form action="/tweets/<%=@tweet.id%>" method="POST">
+	<input id="hidden" type="hidden" name="_method" value="PATCH">
 	<input type="text" name="content" value="<%=@tweet.content%>">
 	<input type="submit" value="submit">
 </form>
