--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -4,5 +4,5 @@
 	<input type="text" name="username" placeholder="Username:">
 	<input type="text" name="password" placeholder="Password:">
 
-	<input type="submit" value="Login">
+	<input type="submit" value="submit">
 </form>
