Last minute changes

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -1,9 +1,10 @@
 <!doctype html>
 <html>
     <head>
-        <title>Fwitter Project>
+        <title>Fwitter Project></title>
     </head>
     <body>
         <%= yield %>
     </body>
 </html>
+
