--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -4,6 +4,7 @@
     <label><h3>User Name:</h3> </label>
     <input type="text" name="user[username]" id="username"><br><br>
     <label><h3>Password:</h3></label>
-    <input type="text" name="user[password]" id="password">
+    <input type="password" name="user[password]" id="password">
     <input type="submit" value="submit">
   </form>
+  <h3><a href="/">Return to homepage</a></h3>
