--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -1,10 +1,10 @@
 <h1>Create a new user</h1>
   <form action="/signup" method="POST">
     <label><h3>User Name:</h3> </label>
-    <input type="text" name="user[username]" id="username"><br><br>
+    <input type="text" name="username" id="username"><br><br>
     <label><h3>Email:</h3></label>
-    <input type="text" name="user[email]">
+    <input type="text" name="email">
     <label><h3>Password:</h3></label>
-    <input type="text" name="user[password]" value="user[password]">
+    <input type="password" name="password">
     <input type="submit" value="Create New User">
   </form>
