--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -1,5 +1,5 @@
 <h1>Create a new tweet</h1>
-  <form action="/tweets/new" method="POST">
+  <form action="/tweets" method="POST">
     <input type="hidden" name="user_id" value=<%=@user.id%>><br><br>
     <label><h3>Content:</h3></label>
     <input type="text" name="content">
