--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -1,4 +1,5 @@
-<form action="/tweets/change" method="POST">
+<form action="/tweets/<%=@tweet.id%>" method="post">
+    <input id="hidden" type="hidden" name="_method" value="patch">
     <input type="text" name="content" value="<%=@tweet.content%>">
     <input type="hidden" name="tweet_id" value=<%=@tweet.id%>><br><br>
     <input type="submit" value="submit">
