--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -2,6 +2,6 @@
 <form action="/tweets/<%=@tweet.user_id%>/delete" method="POST">
   Delete Tweet <input type="submit" name="delete" value="Delete Tweet"><br>
 </form>
-<form action="/edit_tweet" method="POST">
+<form action="/<=%tweet.id%>/edit" method="POST">
   Edit Tweet <input type="submit" name="edit" value="Edit Tweet">
 </form>
