--- a/app/views/tweets/show_user_tweets.erb
+++ b/app/views/tweets/show_user_tweets.erb
@@ -1,5 +1,9 @@
 <h2>User <%=@user.username%>'s tweets</h2>
     <%Tweet.all.each do |tweet| if tweet.user_id == @user.id%>
     <%=tweet.content%><br>
-    <%end%>
+    <form action="/tweets/<%=tweet.id%>/edit" method="get">
+      Edit Tweet <input type="submit" name="edit" value="Edit Tweet">
+    </form>
 <%end%>
+<%end%>
+
