--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -6,4 +6,5 @@
 <%end%>
 <h3><a href="/tweets/new">Create a new tweet</a></h3>
 <h3><a href="/">Return to homepage</a></h3>
+<h3><a href="/tweets/show_user_tweets">Go to my tweets</h3>
 <h3><a href="/logout">Logout</a></h3>
