Still getting errors

--- a/app/views/tweets/new.erb
+++ b/app/views/tweets/new.erb
@@ -3,5 +3,5 @@
 <form action="/tweets" method="post">
 	<label>Content:</label>
 	<input type="text" name="content">
-	<input type="submit" value="create tweet">
+	<input type="submit" value="submit">
 </form>
