--- a/app/views/tweets/index.erb
+++ b/app/views/tweets/index.erb
@@ -1,5 +1,5 @@
-<h1>Tweets</h1>
+<h1>Welcome,</h1>
 <% @tweets.each do |tweet| %>
-<li><a href="/tweets/<%= tweet.id %>"><%= tweet.content %></a></li>
+	<%= tweet.content %>
 	
 <% end %>
