--- a/app/views/tweets/show.erb
+++ b/app/views/tweets/show.erb
@@ -5,3 +5,5 @@
 	<input type="hidden" name="_method" value="delete">
 	<input type="submit" value="Delete Tweet">
 </form>
+
+<a href="/tweets/<%=@tweet.id%>/edit">Edit Tweet</a>
