--- a/app/views/tweets/edit.erb
+++ b/app/views/tweets/edit.erb
@@ -1,5 +1,5 @@
 <form action="/tweets/<%= @tweet.id %>" method="post">
-	<input type="hidden" name="_method" value="PATCH">
+	<input id="hidden" type="hidden" name="_method" value="PATCH">
 	<label>Content</label>
 	<input type="text" name="content" value="<%= @tweet.content %>">
 	<input type="submit" value="submit">
