--- a/app/views/tweets/show.erb
+++ b/app/views/tweets/show.erb
@@ -2,7 +2,7 @@
 
 
 <form action="/tweets/<%= @tweet.id %>/delete" method="POST">
-	<input type="hidden" name="_method" value="delete">
+	<input id="hidden" type="hidden" name="_method" value="DELETE">
 	<input type="submit" value="Delete Tweet">
 </form>
 
