started styling, initial draft of home page and general layout finished

--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -3,6 +3,6 @@
 <form action="/tweets" method="post">
   <p><label>Your tweet:</label><input type="text" name="content" value="" id=":content"></p>
   <p>
-    <input type="submit" value="Submit" id="submit">
+    <input class="submit" type="submit" value="Submit" id="submit">
   </p>
 </form>
