--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -3,8 +3,19 @@
   <head>
     <meta charset="utf-8">
     <title>Fwitter</title>
+
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
+    <link rel="stylesheet" href="/stylesheets/styles.css">
   </head>
   <body>
-    <%= yield %>
+    <div class="navbar">
+      <a href="/"><img src="images/fwitter_nimbus-01.png" id="logo"/></a>
+    </div>
+    <div class="wrapper">
+      <div class="content">
+        <%= yield %>
+      </div>
+    </div>
+
   </body>
 </html>
